[gd_scene load_steps=2 format=3 uid="uid://bkty4ssqdtcvx"]

[ext_resource type="Script" path="res://systems/audio_system/scenes/single_sound_component/single_sound_component.gd" id="1_mlqfd"]

[node name="SingleSoundComponent" type="AudioStreamPlayer2D"]
script = ExtResource("1_mlqfd")

[node name="DelayTimer" type="Timer" parent="."]
one_shot = true

[connection signal="finished" from="." to="." method="_on_finished"]
